crates/sdk-core/tests/workflows_trybuild/sync_run_fail.stderr
error: #[run] methods must be async
 --> tests/workflows_trybuild/sync_run_fail.rs:9:9
  |
9 |     pub fn run(&mut self, _ctx: &mut WorkflowContext) -> WorkflowResult<()> {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
